# HR-Chatbot

./: app_new.py  core_hr1.py  pyproject.toml  requirements.txt
