[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "pymupdf>=1.26.1",
    "streamlit>=1.46.0",
    "streamlit-chat>=0.1.1",
    "supabase>=2.15.3",
    "textblob>=0.19.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
